--- a/1-front-end-app/styles.scss
+++ b/1-front-end-app/styles.scss
@@ -52,6 +52,7 @@ body {
 
 .img {
   border: 0;
+  width: 100px;
   margin: 5px;
   border-radius: 50%;
   transition: all 150ms ease-in-out;
@@ -111,12 +112,15 @@ body {
   }
 
   &__img{
-    height: 20vh;
+    min-height: 150px;
     margin: 30px auto 10px auto;
     border-radius: 50%;
 
+    @media(max-width: $lg) {
+      height: 500px
+    }
     @media(max-width: $lg) and (orientation: landscape){
-      height: 30vh;
+      height: 150px
     }
   }
 
@@ -143,12 +147,13 @@ body {
     margin: 20px auto 30px auto;
 
     @media(max-width: $lg) {
-      margin: 40px auto 40px auto;
-      font-size: 3em;
+      margin: 200px auto 0px auto;
+      font-size: 4em;
       padding: 20px 30px;
     }
     @media(max-width: $lg) and (orientation: landscape){
       font-size: 2em;
+      margin: 50px auto 0px auto;
       padding: 10px 15px;
     }
   }
