--- a/1-front-end-app/styles.scss
+++ b/1-front-end-app/styles.scss
@@ -1,172 +1,6 @@
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-
-@font-face {
- font-family: "Jost-medium";
- src: url('./assets/Jost-500-Medium.ttf');
-}
-
-$font-standard: "Jost-medium";
-
-@mixin font {
-  font-family: $font-standard;
-  color: $font-color
-}
-
-$sm: 576px;
-$md: 768px;
-$lg: 992px;
-$xl: 1200px;
-$xxl: 1920px;
-
-$font-color: black;
-$color-standard: white;
-
-#root {
-  margin: 0 auto;
-  width: 80%;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  max-width: 100%;
-  overflow-x: hidden;
-}
-.header{
-  position: fixed;
-  width: 100vw;
-
-  left: 0;
-  z-index: 10;
-  background-color:$color-standard;
- 
-
-  &__title{
-    margin: 10px auto;
-    width: 78%;
-    @include font();
-    
-    font-family: $font-standard;
-    letter-spacing: 3px;
-
-    @media(max-width: $lg) {
-      font-size: 4em;
-      text-align: center;
-    }
-    @media(max-width: $lg) and (orientation: landscape){
-      font-size: 3em;
-    }
-  }
-}
-
-.img {
-  border: 0;
-  width: 100px;
-  margin: 5px;
-  border-radius: 50%;
-  transition: all 150ms ease-in-out;
-
-  @media(max-width: $lg) {
-    width: 20%;
-  }
-  @media(max-width: $lg) and (orientation: landscape){
-    width: 10%;
-  }
-
-  &:hover{
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
-  }
-
-  &.is-highlighted{
-    -webkit-animation:spin 1s linear infinite;
-    -moz-animation:spin 1s linear infinite;
-    animation:spin 1s linear infinite;
-  }
-}
-
-
-
-.gravatars{
-  display: flex ;
-  flex-wrap: wrap;
-  padding-top: 70px;
-  @media (max-width: $lg) {
-    justify-content: center;
-    padding-top: 100px;
-  }
-}
-
-
-.modal{
-  position: fixed;
-  left: 50%;
-  top:50%;
-  transform: translate(-50%,-50%);
-  width: 15vw;
-  height: 30vh;
-  background-color: $color-standard;
-  border-radius: 5px;
-  box-shadow: 1px 1px 30px grey;
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  @media (max-width: $lg) {
-    width: 90vw;
-    height: 90vh;
-
-  }
-
-  &__img{
-    min-height: 150px;
-    margin: 30px auto 10px auto;
-    border-radius: 50%;
-
-    @media(max-width: $lg) {
-      height: 500px
-    }
-    @media(max-width: $lg) and (orientation: landscape){
-      height: 150px
-    }
-  }
-
-  &__text{
-    text-align: center;
-    letter-spacing: 1px;
-    font-weight: 100;
-
-    @media(max-width: $lg) {
-      font-size: 3em;
-    }
-    @media(max-width: $lg) and (orientation: landscape){
-      font-size: 2em;
-    }
-  }
-  &__button{
-    background-color: $color-standard;
-    outline: none;
-    border: none;
-    box-shadow: 1px 1px 10px gray;
-    font-size: 1em;
-    padding: 5px 10px;
-    border-radius: 5px;
-    margin: 20px auto 30px auto;
-
-    @media(max-width: $lg) {
-      margin: 200px auto 0px auto;
-      font-size: 4em;
-      padding: 20px 30px;
-    }
-    @media(max-width: $lg) and (orientation: landscape){
-      font-size: 2em;
-      margin: 50px auto 0px auto;
-      padding: 10px 15px;
-    }
-  }
-}
-
+@import "./styles/general";
+@import "./styles/varibles.scss";
+@import "./styles/modal.scss";
+@import "./styles/gravatars";
+@import "./styles/header";
+@import "./styles/animations";
