--- a/1-front-end-app/styles.scss
+++ b/1-front-end-app/styles.scss
@@ -1,6 +1,6 @@
-@import "./styles/general";
+@import "./styles/general.scss";
 @import "./styles/varibles.scss";
 @import "./styles/modal.scss";
-@import "./styles/gravatars";
-@import "./styles/header";
-@import "./styles/animations";
+@import "./styles/gravatars.scss";
+@import "./styles/header.scss";
+@import "./styles/animations.scss";
