--- a/1-front-end-app/styles/_header.scss
+++ b/1-front-end-app/styles/_header.scss
@@ -1,3 +1,5 @@
+@import "varibles";
+
 .header{
     position: fixed;
     width: 100vw;
@@ -11,6 +13,7 @@
       width: 79%;
       font-family: $font-standard;
       letter-spacing: 3px;
+      cursor: pointer;
   
       @media(max-width: $lg) {
         font-size: 4em;
